<resources>
    <string name="app_name">Medi-App</string>
    <!--string name="tab_text_1">Heart</string>
    <string name="tab_text_2">Diabetes</string-->
    <string name="textview">TextView</string>
    <string name="firstName" />
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Diabetes</string>
    <string name="tab_text_2">Breast</string>
    <string name="tab_text_3">Heart</string>
    <string name="PasswordTextView">Password :</string>
    <string name="PwordEditText">Password</string>
    <string name="E_MailEditText">E-mail</string>
    <string name="Register_Button">Register</string>
    <string name="Login_Button">Login</string>
    <string name="E_MailTextView">Email :</string>
    <string name="RegisterTextView">Haven\'t got an account? Register here!</string>
    <string name="FirstNameEditTextHint">First Name</string>
    <string name="second_nameEditText">Second Name</string>
    <string name="phonenumberEditText">PhoneNumber</string>
    <string name="addressTextView">Address</string>
    <string name="button">Button</string>
    <string name="select_a_gp_here">Select a GP here :</string>
    <string name="age">Age</string>
    <string name="enter_address_here">Enter Address Here</string>
    <string name="chest_pain_from_0_to_3">Chest Pain from 0 to 3</string>
    <string name="fasting_blood_sugar_over_120">Fasting Blood sugar over 120?</string>
    <string name="resting_blood_pressure">Resting blood pressure</string>
    <string name="sex_male_or_female">Sex Male or Female</string>
    <string name="serum_cholestoral_in_mg_dl">serum cholestoral in mg/dl</string>
    <string name="electrocardiographic_results_0_1_2">electrocardiographic results(0,1,2)</string>
    <string name="max_heart_rate">Max Heart Rate</string>
    <string name="exercise_induced_angina">Exercise Induced Angina</string>
    <string name="depression_induced_by_exercise_relative_to_rest">depression induced by exercise relative to rest</string>
    <string name="slope_of_peak_exercise">Slope of peak exercise</string>
    <string name="major_blood_vessels_colored_by_flourosopy">Major Blood Vessels colored by flourosopy</string>
    <string name="_0_1_2">(0,1,2)</string>
    <string name="runinference">RunInference</string>
    <!--  <string name="tab_text_3">Cancer</string> -->
</resources>
