<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/the_slope_of_the_peak_exercise_ST_segment"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/slope_of_peak_exercise"
            android:inputType="textPersonName"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText13"
            app:layout_constraintVertical_bias="0.058"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Thal"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/_0_1_2"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CA"
            app:layout_constraintVertical_bias="0.112"
            android:autofillHints="" />

        <EditText
            android:id="@+id/RestingEcocrdigraphResults"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/electrocardiographic_results_0_1_2"
            android:inputType="textPersonName"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeartFastingBloodSugar"
            app:layout_constraintVertical_bias="0.019"
            android:autofillHints="" />

        <EditText
            android:id="@+id/RestingBPHeart"
            android:layout_width="158dp"
            android:layout_height="36dp"
            android:ems="10"
            android:hint="@string/resting_blood_pressure"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ChestPainTypeHeart"
            app:layout_constraintVertical_bias="0.022"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ChestPainTypeHeart"
            android:layout_width="156dp"
            android:layout_height="36dp"
            android:ems="10"
            android:hint="@string/chest_pain_from_0_to_3"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SexHeart"
            app:layout_constraintVertical_bias="0.019"
            android:autofillHints="" />

        <Button
            android:id="@+id/HeartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runinference"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.838" />

        <EditText
            android:id="@+id/Age"
            android:layout_width="155dp"
            android:layout_height="33dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024"
            android:autofillHints="" />

        <EditText
            android:id="@+id/SexHeart"
            android:layout_width="156dp"
            android:layout_height="36dp"
            android:ems="10"
            android:hint="@string/sex_male_or_female"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Age"
            app:layout_constraintVertical_bias="0.025"
            android:autofillHints="" />

        <EditText
            android:id="@+id/HeartCholestoral"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/serum_cholestoral_in_mg_dl"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RestingBPHeart"
            app:layout_constraintVertical_bias="0.02"
            android:autofillHints="" />

        <EditText
            android:id="@+id/HeartFastingBloodSugar"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/fasting_blood_sugar_over_120"
            android:inputType="textPersonName"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeartCholestoral"
            app:layout_constraintVertical_bias="0.02"
            android:autofillHints="" />

        <EditText
            android:id="@+id/HeartRate"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/max_heart_rate"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RestingEcocrdigraphResults"
            app:layout_constraintVertical_bias="0.022"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/depression_induced_by_exercise_relative_to_rest"
            android:inputType="textPersonName"
            android:textSize="7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Exercise_induced_ani"
            app:layout_constraintVertical_bias="0.00999999"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Exercise_induced_ani"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/exercise_induced_angina"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeartRate"
            app:layout_constraintVertical_bias="0.029"
            android:autofillHints="" />

        <EditText
            android:id="@+id/CA"
            android:layout_width="158dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/major_blood_vessels_colored_by_flourosopy"
            android:inputType="textPersonName"
            android:textSize="6sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/the_slope_of_the_peak_exercise_ST_segment"
            app:layout_constraintVertical_bias="0.052"
            android:autofillHints="" />

        <TextView
            android:id="@+id/HTV"
            android:layout_width="132dp"
            android:layout_height="94dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.849"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.441" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>